tests/integration/snapshots/integration_suite__integration__bits_2_bits__anm12_anchor_ss_signature.snap
---
source: tests/integration/bits_2_bits.rs
expression: s
---
#pragma mapfile "map/any.anmm"

entry {
    path: "subdir/file.png",
    source: "none",
    buf_width: 512,
    buf_height: 512,
    buf_format: 3,
    offset_x: 0,
    offset_y: 0,
    colorkey: 0x0,
    memory_priority: 0,
    low_res_scale: false,
    sprites: {sprite0: {x: 0.0, y: 0.0, w: 512.0, h: 480.0}},
}


script 0 script0 {
    anchor(1, 2);
    pos(0.0, 0.0, 0.0);
}

