tests/integration/snapshots/integration_suite__integration__bits_2_bits__anm12_registers.snap
---
source: tests/integration/bits_2_bits.rs
expression: s
---
#pragma mapfile "map/any.anmm"

entry {
    path: "subdir/file.png",
    has_data: false,
    buf_width: 512,
    buf_height: 512,
    buf_format: FORMAT_RGB_565,
    memory_priority: 0,
    sprites: {sprite0: {x: 0.0, y: 0.0, w: 512.0, h: 480.0}},
}


script 0 script0 {
    I0 = 3;
    I1 = I0;
}

