tests/integration/snapshots/integration_suite__integration__bits_2_bits__anm12_sprite_duplicates.snap
---
source: tests/integration/bits_2_bits.rs
expression: s
---
#pragma mapfile "map/any.anmm"

entry {
    path: "subdir/file.png",
    source: "none",
    buf_width: 512,
    buf_height: 512,
    buf_format: 3,
    offset_x: 0,
    offset_y: 0,
    colorkey: 0x0,
    memory_priority: 0,
    low_res_scale: false,
    sprites: {
        sprite0: {x: 0.0, y: 0.0, w: 512.0, h: 480.0},
        sprite1: {x: 0.0, y: 0.0, w: 512.0, h: 480.0},
        sprite2: {x: 0.0, y: 0.0, w: 512.0, h: 480.0},
    },
}


entry {
    path: "subdir/file-2.png",
    source: "none",
    buf_width: 512,
    buf_height: 512,
    buf_format: 3,
    offset_x: 0,
    offset_y: 0,
    colorkey: 0x0,
    memory_priority: 0,
    low_res_scale: false,
    sprites: {
        sprite0: {x: 0.0, y: 0.0, w: 512.0, h: 480.0, id: 0},
        sprite1: {x: 0.0, y: 0.0, w: 512.0, h: 480.0},
        sprite2: {x: 0.0, y: 0.0, w: 512.0, h: 480.0},
    },
}


script 0 script0 {
}

