tests/integration/snapshots/integration_suite__integration__bits_2_bits__msg06_multiple_scripts.snap
---
source: tests/integration/bits_2_bits.rs
expression: s
---
#pragma mapfile "map/any.msgm"

meta {
    table: {
        0: {script: "script0"},
        1: {script: "script1"},
        10: {script: "script10"},
        11: {script: "script11"},
        default: {script: "script0"},
    },
}


script script0 {
    enter(0, 0);
    face(0, 0);
    anmInterrupt(0, 1);
+60: // 60
    textPause(300);
}


script script1 {
    enter(0, 0);
    stop();
}


script script10 {
    enter(0, 0);
    face(0, 0);
    anmInterrupt(0, 1);
}


script script11 {
    enter(0, 0);
    anmInterrupt(0, 1);
}

