tests/integration/snapshots/integration_suite__integration__bits_2_bits__msg06_z_string.snap
---
source: tests/integration/bits_2_bits.rs
expression: s
---
#pragma mapfile "map/any.msgm"

script 0 main {
    anmInterrupt(0, 1);
+60: // 60
    textSet(0, 0, "でも...");
    anmInterrupt(0, 0);
    textSet(0, 0, "also here's an ascii string so it's not all mojibake");
    textPause(300);
}

