tests/integration/snapshots/integration_suite__integration__bits_2_bits__msg09_default_zero_with_flags.snap
---
source: tests/integration/bits_2_bits.rs
expression: s
---
#pragma mapfile "map/any.msgm"

meta {table_len: 3, table: {1: {script: "script0", flags: 256}, default: {script: 0, flags: 256}}}


script script0 {
}

