tests/integration/snapshots/integration_suite__integration__bits_2_bits__msg11_furibug_not_applicable.snap
---
source: tests/integration/bits_2_bits.rs
expression: s
---
#pragma mapfile "map/any.msgm"

meta {table: {0: {script: "script0", flags: 256}}}


script script0 {
    textAdd("|4,9,abcdefghijklmn");
    textAdd("ABCD_EFGHIJK");
    textAdd("ABCD_EFGHIJK");
}

